fix overflow : hidden pour le container

--- a/ville-saint-nazaire/public/css/style.css
+++ b/ville-saint-nazaire/public/css/style.css
@@ -10,19 +10,13 @@
 
 body{
     color: black;
-    /*overflow: hidden;   /* pour slidr dans certains navigateurs */
 }
 
 #container{
     background-image: url('../img/background.png');
     position: relative; /* pour permettre le positionnement en absolu des autres éléments */
+    overflow: hidden;
 }
-/* on fait en sorte que le slidr et les slides remplissent tout notre conteneur
-#slidr, #slidr section{
-    width: 100%;
-    height: 100%;
-}*/
-
 
 
 /* ---------- media queries importantes pour le responsive facile :-D ----------------- */
@@ -59,6 +53,7 @@ dessus de l'apect ratio 16/9 */
         margin-left: calc((100vw - 100 * 16vh / 9) / 2);
         width: calc(100 * 16vh / 9);
         height: 100vh;
+
     }
     section{
         width: calc(100 * 16vh / 9);
